Make example packages private, add changeset files

--- a/examples/postcss-example/package.json
+++ b/examples/postcss-example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@example/postcss",
+  "private": true,
   "main": "./dist/main/index.js",
   "types": "./dist/types/index.d.ts",
   "exports": {
