--- a/examples/sass-example/package.json
+++ b/examples/sass-example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@example/sass",
+  "private": true,
   "main": "./dist/main/index.js",
   "types": "./dist/types/index.d.ts",
   "type": "module",
