--- a/examples/postcss-cjs-example/package.json
+++ b/examples/postcss-cjs-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/postcss",
+  "name": "@example/postcss-cjs",
   "private": true,
   "main": "./dist/main/index.js",
   "types": "./dist/types/index.d.ts",
