Fix commonjs/esm outputs, add release workflow (#4)

--- a/examples/postcss-cjs-example/.swcrc
+++ b/examples/postcss-cjs-example/.swcrc
@@ -7,7 +7,8 @@
     }
   },
   "module": {
-    "type": "commonjs"
+    "type": "commonjs",
+    "strict": true
   },
   "sourceMaps": true,
   "inlineSourcesContent": false
