--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: "20"
           cache: yarn
+          registry-url: "https://registry.npmjs.org"
       - name: Install dependencies
         run: yarn install --immutable
       - name: Build and prepare pnp-sass-importer project
