--- a/packages/pnp-sass-importer/package.json
+++ b/packages/pnp-sass-importer/package.json
@@ -63,5 +63,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/styu/pnp-sass-importer.git"
-  }
+  },
+  "license": "MIT"
 }
