--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.7",
+    "@changesets/cli": "^2.27.9",
     "prettier": "^3.3.3",
     "turbo": "^2.0.14",
     "typescript": "~5.5.3"
   },
   "engines": {
     "node": ">=20.9.0"
+  },
+  "resolutions": {
+    "postcss-typesafe-css-modules": "portal:/Users/stephyu/Projects/postcss-typesafe-css-modules"
   }
 }
