--- a/packages/pnp-sass-importer/package.json
+++ b/packages/pnp-sass-importer/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@yarnpkg/fslib": "~3.1.0",
     "@yarnpkg/libzip": "~3.1.0",
-    "sass": "~1.77.8"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@swc/cli": "^0.4.0",
