--- a/packages/pnp-sass-importer/package.json
+++ b/packages/pnp-sass-importer/package.json
@@ -33,8 +33,8 @@
     "clean": "rm -rf dist && rm -rf build"
   },
   "dependencies": {
-    "@yarnpkg/fslib": "~3.1.0",
-    "@yarnpkg/libzip": "~3.1.0",
+    "@yarnpkg/fslib": "^3.1.2",
+    "@yarnpkg/libzip": "^3.2.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
