Support pkg: protocol

--- a/packages/pnp-sass-importer/tsconfig.json
+++ b/packages/pnp-sass-importer/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "build/typescript/types",
-    "strict": true,
-    "target": "esnext"
-  },
-  "include": ["src/**/*"]
+  "extends": "./tsconfig.esm.json"
 }
