--- a/packages/pnp-sass-importer/package.json
+++ b/packages/pnp-sass-importer/package.json
@@ -1,33 +1,33 @@
 {
   "name": "pnp-sass-importer",
   "version": "1.0.0",
-  "main": "./dist/cjs/importer.js",
-  "module": "./dist/esm/importer.mjs",
-  "types": "./dist/types/importer.d.ts",
+  "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/types/importer.d.ts",
-      "import": "./dist/esm/importer.mjs",
-      "default": "./dist/cjs/importer.js"
+      "import": {
+        "types": "./dist/esm/index.d.mts",
+        "default": "./dist/esm/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/index.cjs"
+      }
     },
     "./legacy": {
-      "types": "./dist/types/legacyImporter.d.ts",
-      "import": "./dist/esm/legacyImporter.mjs",
-      "default": "./dist/cjs/legacyImporter.js"
+      "import": {
+        "types": "./dist/esm/legacy/index.d.mts",
+        "default": "./dist/esm/legacy/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/legacy/index.d.cts",
+        "default": "./dist/cjs/legacy/index.cjs"
+      }
     }
   },
   "scripts": {
-    "assemble": "echo 'Done'",
-    "assemble-prepare": "mkdir -p dist/esm && mkdir -p dist/types && mkdir -p dist/cjs",
-    "assemble-typescript-main": "echo 'Done'",
-    "assemble-typescript-esm": "cp build/typescript/esm/**/*.mjs* dist/esm",
-    "assemble-typescript-cjs": "cp build/typescript/cjs/**/*.js* dist/cjs",
-    "assemble-typescript-types": "cp build/typescript/types/**/*.d.ts* dist/types",
     "build": "echo 'Done'",
-    "build-transpile": "echo 'Done'",
-    "build-transpile-esm": "swc ./src --config-file esm.swcrc --out-dir build/typescript/esm --strip-leading-paths --out-file-extension mjs",
-    "build-transpile-cjs": "swc ./src --config-file cjs.swcrc --out-dir build/typescript/cjs --strip-leading-paths",
-    "build-typecheck": "tsc -p tsconfig.json",
+    "build:cjs": "rm -rf dist/cjs && mkdir -p dist/cjs && echo '{ \"type\": \"commonjs\" }' > dist/cjs/package.json && tsc -p tsconfig.cjs.json --outDir dist/cjs",
+    "build:esm": "rm -rf dist/esm && mkdir -p dist/esm && echo '{ \"type\": \"module\" }' > dist/esm/package.json && tsc -p tsconfig.esm.json --outDir dist/esm",
     "lint": "prettier --check 'src/**/*.{ts,scss}*'",
     "lint-fix": "prettier --write 'src/**/*.{ts,scss}*'",
     "clean": "rm -rf dist && rm -rf build"
@@ -64,5 +64,8 @@
     "type": "git",
     "url": "git+https://github.com/styu/pnp-sass-importer.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=22"
+  }
 }
