--- a/examples/postcss-cjs-example/package.json
+++ b/examples/postcss-cjs-example/package.json
@@ -7,6 +7,9 @@
     ".": {
       "types": "./dist/types/index.d.ts",
       "default": "./dist/main/index.js"
+    },
+    "./css/*.module.css": {
+      "default": "./build/postcss/*.module.css"
     }
   },
   "scripts": {
