--- a/turbo.json
+++ b/turbo.json
@@ -88,6 +88,10 @@
       "cache": false,
       "persistent": true,
       "dependsOn": ["^build"]
+    },
+    "test": {
+      "dependsOn": ["^build"],
+      "outputs": ["build/vitest/**"]
     }
   }
 }
