--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "lint-fix": "turbo run lint-fix",
+    "test": "turbo run test",
     "clean": "turbo run clean"
   },
   "devDependencies": {
