--- a/examples/e2e/package.json
+++ b/examples/e2e/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "vitest run --reporter verbose --outputFile=build/vitest/results.xml",
+    "test": "vitest run --reporter junit --outputFile build/vitest/results.xml",
     "lint": "prettier --check 'src/**/*.{ts,scss}*'",
     "lint-fix": "prettier --write 'src/**/*.{ts,scss}*'",
     "clean": "rm -rf dist && rm -rf build"
