--- a/examples/e2e/package.json
+++ b/examples/e2e/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "vitest run --reporter junit --outputFile build/vitest/results.xml",
-    "lint": "prettier --check 'src/**/*.{ts,scss}*'",
-    "lint-fix": "prettier --write 'src/**/*.{ts,scss}*'",
+    "lint": "prettier --check 'test/**/*.{ts,scss}*'",
+    "lint-fix": "prettier --write 'test/**/*.{ts,scss}*'",
     "clean": "rm -rf dist && rm -rf build"
   },
   "dependencies": {
